--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             -->
             </div>
           <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
+            <h4s class="text-white">Contact</h4>
             <ul class="list-unstyled">
               <li><a href="#" class="text-white">Follow on Twitter</a></li>
               <li><a href="#" class="text-white">Like on Facebook</a></li>
@@ -164,9 +164,11 @@
       <p class="float-end mb-1">
         <a href="#">Back to top</a>
       </p>
+        <!--
       <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
       <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
           href="../getting-started/introduction/">getting started guide</a>.</p>
+        -->
     </div>
   </footer>
 
