--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       "headers": {
         "Authorization": "Basic NDcxMjgwOlNueFNJV2NnTTdpY3dNZE0=",
         "Cookie": "__cfduid=d226aba6bb8da9c285a07f11fd54a09c61609344443",
-        "Access-Control-Allow-Origin": "localhost",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "POST,GET,OPTIONS, PUT, DELETE",
         "Access-Control-Allow-Headers": "Accept, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization"
       },
